Continued updating External Accessory on IOS.
Got IOS connected and sending data.
Validated with two way communication

breaking changes to Android will need to be looked at.

--- a/BluetoothClassicExample/package.json
+++ b/BluetoothClassicExample/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.9",
-    "react-native-easy-toast": "^1.2.0"
+    "react-native-easy-toast": "^1.2.0",
+    "react-native-keyboard-spacer": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
