--- a/BluetoothClassicExample/package.json
+++ b/BluetoothClassicExample/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bluetooth-classic-example",
-  "version": "0.0.1",
+  "version": "0.9.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -19,6 +19,7 @@
     "get-dev-paths": "^0.1.1",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
+    "npm-version": "^1.1.0",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
