Updated invalid package file

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "author": "Kenneth Davidson <ken.j.davidson@live.ca> (https://github.com/kenjdavidson)",
   "contributors": [
-    "Jakub Martyčák <martycakjakub@gmail.com>",
+    "Jakub Martyčák <martycakjakub@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
