--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-bluetooth-classic",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "Implement bluetooth classic (serial) on Android (Bluetooth Adapter) and IOS (External Accessory)",
   "main": "src/index.js",
   "scripts": {
@@ -17,7 +17,9 @@
   ],
   "author": "Kenneth Davidson <ken.j.davidson@live.ca> (https://github.com/kenjdavidson)",
   "contributors": [
-    "Jakub Martyčák <martycakjakub@gmail.com>"
+    "Jakub Martyčák <martycakjakub@gmail.com>",
+    "Tony Lara <tony.lara.p@gmail.com>",
+    "redloro@gmail.com"
   ],
   "license": "MIT",
   "bugs": {
