--- a/BluetoothClassicExample/android/settings.gradle
+++ b/BluetoothClassicExample/android/settings.gradle
@@ -1,5 +1,3 @@
 rootProject.name = 'BluetoothClassicExample'
-include ':react-native-bluetooth-classic'
-project(':react-native-bluetooth-classic').projectDir = new File(rootProject.projectDir, '../../android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
