--- a/BluetoothClassicExample/package.json
+++ b/BluetoothClassicExample/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "bluetooth-classic-example",
-  "version": "0.9.0",
+  "name": "BluetoothClassicExample",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.9",
-    "react-native-easy-toast": "^1.2.0",
-    "react-native-keyboard-spacer": "^0.4.1"
+    "react": "16.9.0",
+    "react-native": "0.61.5"
   },
   "devDependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/runtime": "7.4.5",
-    "babel-jest": "24.8.0",
-    "get-dev-paths": "^0.1.1",
-    "jest": "24.8.0",
-    "metro-react-native-babel-preset": "0.54.1",
-    "npm-version": "^1.1.0",
-    "react-test-renderer": "16.8.3"
+    "@babel/core": "7.8.3",
+    "@babel/runtime": "7.8.3",
+    "@react-native-community/eslint-config": "0.0.5",
+    "babel-jest": "24.9.0",
+    "eslint": "6.8.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.4",
+    "react-test-renderer": "16.9.0"
   },
   "jest": {
     "preset": "react-native"
