--- a/BluetoothClassicExample/android/app/build.gradle
+++ b/BluetoothClassicExample/android/app/build.gradle
@@ -179,6 +179,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-bluetooth-classic')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
