--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-bluetooth-classic",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "description": "Implement bluetooth classic (serial) on Android (Bluetooth Adapter) and IOS (External Accessory)",
   "main": "src/index.js",
   "scripts": {
@@ -18,8 +18,9 @@
   "author": "Kenneth Davidson <ken.j.davidson@live.ca> (https://github.com/kenjdavidson)",
   "contributors": [
     "Jakub Martyčák <martycakjakub@gmail.com>",
-    "Tony Lara <tony.lara.p@gmail.com>",
-    "redloro@gmail.com"
+    "Tony Lara <tony.lara.p@gmail.com> (https://github.com/tonyl)",
+    "redloro@gmail.com (https://github.com/redloro)",
+    "Iamandi Radu <iamandiradustefan@gmail.com> (https://github.com/iamandiradu)"
   ],
   "license": "MIT",
   "bugs": {
