Register typescript definitions in package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.10.9",
   "description": "Implement bluetooth classic (serial) on Android (Bluetooth Adapter) and IOS (External Accessory)",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postversion": "git push && git push --tags && npm publish"
