--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,3 +1,9 @@
-_site
-.sass-cache
-.jekyll-metadata
+# Project dependencies
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+node_modules
+.cache/
+# Build directory
+public/
+static/admin/*.bundle.*
+.DS_Store
+yarn-error.log
