Resolved naming of react-native.config.js

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "android",
     "ios",
     "react-native-bluetooth-classic.podspec",
-    "react-native-config.js"
+    "react-native.config.js"
   ],
   "devDependencies": {
     "@types/node": "^14.14.0",
