Starting adding tests
but failing miserably; can't get peerDependency react-native and its libraries to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,11 +41,11 @@
     // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
-    // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-    "baseUrl": "src",                         /* Base directory to resolve non-absolute module names. */
-    "paths": {
-      "@RNBluetooth": ["/"]
-    },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+    // "moduleResolution": "node",               /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
+    // "baseUrl": ".",                           /* Base directory to resolve non-absolute module names. */
+    // "paths": {
+    //   "@RNBluetooth/*": ["src/*"]
+    // },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
@@ -69,7 +69,7 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "include":[
-    "src"
+    "src", "__tests__"
   ],
   "exclude": [
     "node_modules",
