--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "tsc": "tsc",
     "tsc:watch": "tsc --watch",
     "build": "npm run clean && npm run tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "preversion": "npm run build",
     "postversion": "git push && git push --tags && npm publish"
   },
@@ -50,9 +50,13 @@
     "react-native.config.js"
   ],
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.14.0",
     "@types/react-native": "^0.60.0",
+    "jest": "^26.6.1",
     "npm-version": "^1.1.0",
+    "react-native": "^0.60.0",
+    "ts-jest": "^26.4.3",
     "typescript": "^4.0.3"
   }
 }
