Bunch of stuff to get IOS version compiling and running again

--- a/BluetoothClassicExample/ios/BluetoothClassicExample/Info.plist
+++ b/BluetoothClassicExample/ios/BluetoothClassicExample/Info.plist
@@ -55,5 +55,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Ionicons.ttf</string>
+	</array>
 </dict>
 </plist>
