--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,3 @@
-
 buildscript {
     repositories {
         google()
@@ -29,6 +28,11 @@ android {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
     }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/tests'] } }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 repositories {
@@ -43,5 +47,7 @@ repositories {
 
 dependencies {
     implementation 'com.facebook.react:react-native:+'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
-  
