Continued updating IOS (not entirely happy, but working)

--- a/BluetoothClassicExample/ios/Podfile
+++ b/BluetoothClassicExample/ios/Podfile
@@ -37,7 +37,7 @@ target 'BluetoothClassicExample' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  pod 'RNVectorIcons', :podspec => '../node_modules/react-native-vector-icons/RNVectorIcons.podspec'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   pod 'react-native-bluetooth-classic', :path => '../../'
 
