--- a/android/build.gradle
+++ b/android/build.gradle
@@ -50,4 +50,8 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation group: 'org.powermock', name: 'powermock-core', version: '1.6.6'
+    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.6'
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.6'
+
 }
