Added prefix-path to gatsby release

--- a/.github/workflows/push-docs-publish.yml
+++ b/.github/workflows/push-docs-publish.yml
@@ -35,3 +35,4 @@ jobs:
           access-token: ${{ secrets.ACCESS_TOKEN }}
           deploy-branch: gh-pages
           working-dir: ./docs
+          gatsby-args: --prefix-paths
