Fixed a bunch of stuff
- Reverted minSdkVersion to 16
- Updated some Typescript definitions
- Added some tests to confirm definitions

--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -2,6 +2,9 @@
   "extends": "./tsconfig",
   "compilerOptions": {
     "jsx": "react",
-    "module": "commonjs"
+    "module": "commonjs",
+    "plugins": [
+      { "transform": "ts-auto-mock/transformer", "cacheBetweenTests": false }
+    ]
   }
 }
