--- a/package.json
+++ b/package.json
@@ -54,10 +54,13 @@
     "@types/node": "^14.14.0",
     "@types/react-native": "^0.63.35",
     "jest": "^26.6.1",
+    "jest-ts-auto-mock": "^1.0.11",
     "npm-version": "^1.1.0",
     "react": "^16.8.6",
     "react-native": "^0.60.0",
+    "ts-auto-mock": "^2.6.5",
     "ts-jest": "^26.4.3",
+    "ttypescript": "^1.5.12",
     "typescript": "^4.0.3"
   }
 }
