(chore): renamed npm publish to release cause I'm terrible

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "preversion": "npm run build",
     "postversion": "git push && git push --tags && npm publish",
-    "publish": "npm version prerelease --preid=rc"
+    "release": "npm version prerelease --preid=rc"
   },
   "repository": "git://github.com/kenjdavidson/react-native-bluetooth-classic.git",
   "keywords": [
