--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redloro@gmail.com (https://github.com/redloro)",
     "iamandiradustefan@gmail.com (https://github.com/iamandiradu)",
     "Andrew Krugliak (https://github.com/andreykrugliak)",
-    "Anton Petrov (https://github.com/tpettrov)"
+    "Anton Petrov (https://github.com/tpettrov)",
+    "Stephen Woodruff (https://github.com/woodrufs)"
   ],
   "license": "MIT",
   "bugs": {
