fix(ci): Updated release-and-publish workflow

--- a/.github/workflows/release-and-publish-npm.yml
+++ b/.github/workflows/release-and-publish-npm.yml
@@ -16,8 +16,10 @@ jobs:
       matrix:
         node-version: ['12.16.3']
 
-    # Checks out the appropriate branch (github.ref) and runs the appropriate
-    # npm run release 
+    # Checks out the appropriate branch (github.ref)
+    # Creates release tag
+    # Publishes release tag (ish, actually the current ref but on which the tag was based)
+    # Todo: fixup
     steps:
       - name: Checking out ${{ github.ref_name }}
         uses: actions/checkout@v2
@@ -29,7 +31,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm install
-      - name: Build and Release
+      - name: Build and release tag
         run: npm run release
+      - name: Publish released tag to NPM
+        run: npm run publish-npm
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}          
