--- a/.github/workflows/release-and-publish-npm.yml
+++ b/.github/workflows/release-and-publish-npm.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Build and release tag
         run: npm run release
       - name: Publish released tag to NPM
