--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-bluetooth-classic",
-  "version": "1.60.0-rc.19",
+  "version": "1.73.0-rc.1",
   "description": "Implement bluetooth classic (serial) on Android (Bluetooth Adapter) and IOS (External Accessory)",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -44,10 +44,7 @@
   },
   "homepage": "https://github.com/kenjdavidson/react-native-bluetooth-classic",
   "peerDependencies": {
-    "react-native": ">=0.60.0"
-  },
-  "dependencies": {
-    "buffer": "^5.4.3"
+    "react-native": ">=0.73.0"
   },
   "files": [
     "lib",
@@ -57,17 +54,18 @@
     "react-native.config.js"
   ],
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.0",
-    "@types/react-native": "^0.63.35",
-    "jest": "^26.6.1",
-    "jest-ts-auto-mock": "^1.0.11",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^18.0.0",
+    "@types/react-native": "^0.73.0",
+    "buffer": "^6.0.3",
+    "jest": "^29.7.0",
+    "jest-ts-auto-mock": "^2.1.0",
     "npm-version": "^1.1.0",
-    "react": "^16.8.6",
-    "react-native": "^0.60.0",
-    "ts-auto-mock": "^2.6.5",
-    "ts-jest": "^26.4.3",
-    "ttypescript": "^1.5.12",
-    "typescript": "^4.0.3"
+    "react": "^18.2.0",
+    "react-native": "^0.73.0",
+    "ts-auto-mock": "^3.7.0",
+    "ts-jest": "^29.1.1",
+    "ttypescript": "^1.4.15",
+    "typescript": "^5.3.3"
   }
 }
