--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.3'
     }
 }
 
@@ -16,12 +16,12 @@ def getExtOrDefault(name, fallback) {
 }
 
 android {
-    compileSdkVersion getExtOrDefault('compileSdkVersion', 29)
-    buildToolsVersion getExtOrDefault('buildToolsVersion', "28.0.3")
+    compileSdkVersion getExtOrDefault('compileSdkVersion', 34)
+    buildToolsVersion getExtOrDefault('buildToolsVersion', "34.0.0")
 
     defaultConfig {
         minSdkVersion getExtOrDefault('minSdkVersion', 16)
-        targetSdkVersion getExtOrDefault('targetSdkVersion', 29)
+        targetSdkVersion getExtOrDefault('targetSdkVersion', 34)
         versionCode 1
         versionName "1.0"
     }
@@ -41,7 +41,6 @@ android {
 
 repositories {
     mavenCentral()
-    jcenter()
     google()
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -50,10 +49,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:0.71.0-rc.0'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
     testImplementation group: 'org.powermock', name: 'powermock-core', version: '1.6.6'
     testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.6'
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.6'
