Update compile sdk version Run gradle assistant Apply recommended gradle changes Fix errors

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "Andrew Krugliak (https://github.com/andreykrugliak)",
     "Anton Petrov (https://github.com/tpettrov)",
     "Stephen Woodruff (https://github.com/woodrufs)",
-    "Phil Pettican (https://github.com/philpettican)"
+    "Phil Pettican (https://github.com/philpettican)",
+    "Mark Ormandy <mark.ormandy@myracelab.com>(https://github.com/myracelab)"
   ],
   "license": "MIT",
   "bugs": {
