--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,23 +1,23 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.3'
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "28.0.3"
+    compileSdkVersion getExtOrDefault('compileSdkVersion', 34)
+    buildToolsVersion getExtOrDefault('buildToolsVersion', "34.0.0")
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 29
+        minSdkVersion getExtOrDefault('minSdkVersion', 16)
+        targetSdkVersion getExtOrDefault('targetSdkVersion', 34)
         versionCode 1
         versionName "1.0"
     }
@@ -37,7 +37,6 @@ android {
 
 repositories {
     mavenCentral()
-    jcenter()
     google()
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -46,10 +45,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.facebook.react:react-native:+'
+    implementation 'com.facebook.react:react-native:0.71.0-rc.0'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
     testImplementation group: 'org.powermock', name: 'powermock-core', version: '1.6.6'
     testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '1.6.6'
     testImplementation group: 'org.powermock', name: 'powermock-api-mockito', version: '1.6.6'
