--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-native-bluetooth-classic",
-  "version": "1.70.0",
+  "name": "mrl-react-native-bluetooth-classic",
+  "version": "1.73.0-rc.1",
   "description": "Implement bluetooth classic (serial) on Android (Bluetooth Adapter) and IOS (External Accessory)",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "private": false,
   "scripts": {
     "clean": "rm -rf lib",
     "clean-win": "rd /s /q lib",
