--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^18.19.8",
+    "@types/react": "^18.2.48",
     "jest": "^29.7.0",
     "jest-ts-auto-mock": "^2.1.0",
     "npm-version": "^1.1.0",
