--- a/.github/workflows/release-and-publish-npm.yml
+++ b/.github/workflows/release-and-publish-npm.yml
@@ -31,6 +31,8 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Install dependencies
         run: npm ci
+      - name: Check Git Status
+        run: git status
       - name: Build and release tag
         run: npm run release
         env:
