--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "preversion": "npm run build",
     "release": "npm version prerelease --preid=rc",
     "postversion": "git push && git push --tags",
-    "publish-npm": "npm publish"
+    "publish-npm": "npm publish",
+    "prettier:write": "prettier --write -c '**/*.{ts,tsx}'",
+    "prettier:check": "prettier --check -c '**/*.{ts,tsx}'"
   },
   "repository": "git://github.com/kenjdavidson/react-native-bluetooth-classic.git",
   "keywords": [
@@ -59,12 +61,15 @@
     "react-native.config.js"
   ],
   "devDependencies": {
+    "@tsconfig/react-native": "^3.0.3",
     "@types/jest": "^29.5.11",
     "@types/node": "^18.19.8",
     "@types/react": "^18.2.48",
+    "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.7.0",
     "jest-ts-auto-mock": "^2.1.0",
     "npm-version": "^1.1.0",
+    "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-native": "^0.73.1",
     "ts-auto-mock": "^3.7.2",
