fix ts & js files not emitted
organise tsconfig and add noEmit, allowImportingTsExtensions flags to properly emit files

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-native.config.js"
   ],
   "devDependencies": {
-    "@tsconfig/react-native": "^3.0.3",
+    "@react-native/typescript-config": "^0.74.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^18.19.8",
     "@types/react": "^18.2.48",
